# gridworks-weather-forecast

./: .gitignore  LICENSE  README.md  pyproject.toml  template.env
.github/workflows/: tests.yml
src/gwwf/: __init__.py  __main__.py  config.py  sema_seed_request.yaml  weather_actor.py
src/gwwf/sema/: __init__.py  codec.py  property_format.py
src/gwwf/sema/definitions/: registry.yaml
src/gwwf/sema/definitions/types/weather/: 000.yaml
src/gwwf/sema/indexes/: dependency_closure.yaml  local_names.yaml  lookup.yaml  reverse_dependencies.yaml  seed_expanded.yaml  versions.yaml
src/gwwf/sema/tests/: test_property_format.py
src/gwwf/sema/types/: __init__.py  weather.py
tests/: hw1.isone.ws-weather-1784374799353-ear.electricity.works.json  test_weather_actor.py
