[project]
name = "gridworks-weather-forecast"
version = "0.0.1"
description = "GridWorks weather-forecast service — forecasts for LTN forward-looking optimizers; observed weather for analytics."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "GridWorks", email = "gridworks@gridworks-consulting.com" },
]
requires-python = ">=3.12,<3.14"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "gridworks-base>=0.4.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.0",
    "pendulum>=3.0.0",
    "requests>=2.32.3",
    "result>=0.17.0",
]

[project.urls]
Homepage = "https://github.com/thegridelectric/gridworks-weather-forecast"
Repository = "https://github.com/thegridelectric/gridworks-weather-forecast"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gwwf"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5.6",
    "pre-commit>=3.7",
    "types-requests>=2.32",
]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.ruff]
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]
output-format = "concise"
fix = true
show-fixes = true

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["PLR0904", "PLW1514", "W191"]
preview = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",
]
